# eventstore-grpc-bridge

./: Cargo.toml  LICENSE  README.md  eventstore-bridge
src/: main.rs
src/rpc/: model.rs
