[package]
name = "eventstore-grpc-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
rmp = "0.8.11"
rmp-serde = "1.1.1"
serde = { version = "1.0.163", features = ["std", "derive", "serde_derive"] }
minimal-eventstore = "0.1.2"
rusqlite = { version = "0.28.0", features = ["bundled"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "serde"] }
r2d2_sqlite = "0.21.0"
r2d2 = "0.8.10"
